test/sematest/invalid/assign_to_boolean.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    false = true;
    false = true || false;
  }
}
